# rethinkify

./: .gitignore  .gitmodules  Cargo.toml  README.md  Rethinkify.sln  dd.ps1  rethinkify.sln  right_click.reg  specification.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
Libraries/Jsoncpp/: Jsoncpp.vcxproj  Jsoncpp.vcxproj.filters
Libraries/astyle/: AStyleLib.vcxproj  AStyleLib.vcxproj.filters
Libraries/hunspell/: hunspell.vcxproj  hunspell.vcxproj.filters
Rethinkify/: Platform.h  Rethinkify.cpp  Rethinkify.rc  Rethinkify.vcxproj  Rethinkify.vcxproj.filters  Should.h  SpellCheck.cpp  SpellCheck.h  Tests.cpp  TextBuffer.cpp  TextBuffer.h  TextView.cpp  TextView.h  Util.h  aes256.cpp  aes256.h  crypto.h  document.cpp  document.h  main.cpp  pch.cpp  pch.h  resource.h  spell_check.cpp  spell_check.h  syntax.cpp  text_buffer.cpp  text_buffer.h  text_view.cpp  text_view.h  ui.h  utf.cpp  utf.h
src/: Rethinkify.rc  Rethinkify.vcxproj  Rethinkify.vcxproj.filters  aes256.cpp  aes256.h  agent.cpp  agent.h  app.cpp  app.h  app.manifest  app.rc  app.rs  app.vcxproj  app.vcxproj.filters  app_commands.cpp  app_frame.h  app_state.h  background.rs  calc.h  command_calc.h  commands.cpp  commands.h  commands.rs  config.rs  crypto.cpp  document.cpp  document.h  document.rs  document_syntax.cpp  file_tree.rs  finance.h  finance_scrape.cpp  input.rs  main.cpp  main.rs  menus.rs  pch.cpp  pch.h  platform.h  platform_win.cpp  (+38 more)
web/: .gcloudignore  app.yaml  main.py
web/static/: styles.css
web/templates/: index.html  sitemap.xml
(+1 files in other folders)
