[package]
name = "rethinkify"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3"
cosmic-text = "0.18.2"
directories = "6.0.0"
muda = "0.17.2"
rfd = { version = "0.17.2", features = ["common-controls-v6"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
softbuffer = "0.4.8"
winit = "0.30.13"
